// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Icon > should call the click event when the icon is clicked 1`] = `
<div>
  <rk-icon
    aria-label="i-rokkit:mode-dark"
    data-disabled="false"
    data-size="base"
    data-tag-button="true"
    data-tag-icon="true"
    role="button"
    tabindex="0"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rk-icon>
  
</div>
`;

exports[`Icon > should handle role=option as checkbox 1`] = `
<div>
  <rk-icon
    aria-checked="false"
    aria-label="i-rokkit:mode-dark"
    data-disabled="false"
    data-size="base"
    data-tag-checkbox="true"
    data-tag-icon="true"
    role="option"
    tabindex="0"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rk-icon>
  
</div>
`;

exports[`Icon > should render the icon as disabled 1`] = `
<div>
  <rk-icon
    aria-label="i-rokkit:mode-dark"
    data-disabled="true"
    data-size="base"
    data-tag-icon="true"
    role="img"
    tabindex="-1"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rk-icon>
  
</div>
`;

exports[`Icon > should render the icon with a custom class 1`] = `
<div>
  <rk-icon
    aria-label="i-rokkit:mode-dark"
    class="custom-class"
    data-disabled="false"
    data-size="base"
    data-tag-icon="true"
    role="img"
    tabindex="-1"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rk-icon>
  
</div>
`;

exports[`Icon > should render the icon with a custom class 2`] = `
<div>
  <rk-icon
    aria-label="i-rokkit:mode-dark"
    class="custom-class-2"
    data-disabled="false"
    data-size="base"
    data-tag-icon="true"
    role="img"
    tabindex="-1"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rk-icon>
  
</div>
`;

exports[`Icon > should render the icon with checkbox role 1`] = `
<div>
  <rk-icon
    aria-checked="false"
    aria-label="i-rokkit:mode-dark"
    data-disabled="false"
    data-size="base"
    data-tag-checkbox="true"
    data-tag-icon="true"
    role="checkbox"
    tabindex="0"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rk-icon>
  
</div>
`;

exports[`Icon > should render the icon with checkbox role with default state 1`] = `
<div>
  <rk-icon
    aria-checked="false"
    aria-label="i-rokkit:mode-dark"
    data-disabled="false"
    data-size="base"
    data-tag-checkbox="true"
    data-tag-icon="true"
    role="checkbox"
    tabindex="0"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rk-icon>
  
</div>
`;

exports[`Icon > should render the icon with the provided name and label 1`] = `
<div>
  <rk-icon
    aria-label="Dark mode"
    data-disabled="false"
    data-size="base"
    data-tag-icon="true"
    role="img"
    tabindex="-1"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rk-icon>
  
</div>
`;

exports[`Icon > should render the icon with the provided name and label 2`] = `
<div>
  <rk-icon
    aria-label="Light mode"
    data-disabled="false"
    data-size="base"
    data-tag-icon="true"
    role="img"
    tabindex="-1"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-light"
    />
  </rk-icon>
  
</div>
`;

exports[`Icon > should render the icon with the specified role 1`] = `
<div>
  <rk-icon
    aria-label="i-rokkit:mode-dark"
    data-disabled="false"
    data-size="base"
    data-tag-button="true"
    data-tag-icon="true"
    role="button"
    tabindex="0"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rk-icon>
  
</div>
`;

exports[`Icon > should render the icon with the specified size 1`] = `
<div>
  <rk-icon
    aria-label="i-rokkit:mode-dark"
    data-disabled="false"
    data-size="small"
    data-tag-icon="true"
    role="img"
    tabindex="-1"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rk-icon>
  
</div>
`;

exports[`Icon > should render the icon with the specified size 2`] = `
<div>
  <rk-icon
    aria-label="i-rokkit:mode-dark"
    data-disabled="false"
    data-size="medium"
    data-tag-icon="true"
    role="img"
    tabindex="-1"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rk-icon>
  
</div>
`;

exports[`Icon > should render the icon with the specified size 3`] = `
<div>
  <rk-icon
    aria-label="i-rokkit:mode-dark"
    data-disabled="false"
    data-size="large"
    data-tag-icon="true"
    role="img"
    tabindex="-1"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rk-icon>
  
</div>
`;

exports[`Icon > should render the icon with the specified state 1`] = `
<div>
  <rk-icon
    aria-label="i-rokkit:node-opened"
    data-disabled="false"
    data-size="base"
    data-state="opened"
    data-tag-icon="true"
    role="img"
    tabindex="-1"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:node-opened"
    />
  </rk-icon>
  
</div>
`;
